tests/fixtures/errors/unknown_field_chain.lazy
// error: Unknown field
//   --> tests/fixtures/errors/unknown_field_chain.lazy:12:24
//    |
// 12 | result = config.server.database.port
//    |                        ^-------
//
// Field `database` is not defined on `config.server`. Available fields are: `host`, `port`
//
// help: Check the field name for typos.

config = { server: { host: "localhost", port: 8080 } }
result = config.server.database.port
result
